# MuseLens

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_EN.md  SECURITY.md  ms_deploy.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  deploy-cloud-run.yml  deploy-modelscope.yml  deploy-space.yml  diagnose-modelscope.yml
artifacts/evaluations/: adapter-training-decision-v1.json  auto-tags-demo-v1.json  clip-vit-b32-bilingual-v1.json  clip-vit-b32-rejection-v1.json  clip-vit-b32-sample-v1.json  coco-val2017-live-api-numpy-matrix-v1.json  coco-val2017-live-api-v1.json  (+21 more)
data/: README.md
demo_assets/: ATTRIBUTIONS.md  README.md  manifest.json  query_suite.json
docs/: ARCHITECTURE.md  AUTO_TAGS_RESULTS.md  BASELINE_RESULTS.md  CLOUD_RUN_DEPLOYMENT.md  COCO_SCALE_RESULTS.md  DAY_01.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DUPLICATE_DETECTION_RESULTS.md  ENGINEERING_AUDIT.md  GITHUB_TRAINING_RESEARCH.md  GLOBAL_CHINESE_PROJECT_RESEARCH.md  IMAGE_RETRIEVAL_RESULTS.md  INDEX_BENCHMARK.md  INTERVIEW_GUIDE.md  LEARNING_LOG.md  LOCAL_LIBRARY_E2E.md  MODELSCOPE_DEPLOYMENT.md  MULTILINGUAL_RESULTS.md  OPEN_SOURCE_RESEARCH.md  PORTFOLIO.md  PRECISION_RERANKING_RESULTS.md  PROJECT_PLAN.md  REJECTION_RESULTS.md  TRAINING_RESULTS.md
frontend/: README.md  eslint.config.mjs  index.html  main.tsx  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: benchmark_index_memory.py  benchmark_live_library.py  benchmark_vector_indexes.py  build_demo_gif.py  cleanup_workspace.py  download_evaluation_sample.py  evaluate_auto_tags.py  evaluate_demo_search.py  evaluate_duplicates.py  evaluate_gallery_smoke.py  evaluate_image_retrieval.py  evaluate_precision_reranker.py  evaluate_rejection.py  evaluate_retrieval.py  inspect_modelscope_deployment.py  package_modelscope.py  package_space.py  prepare_coco_validation.py  prepare_demo_assets.py  publish_modelscope.py  publish_space.py  rebuild_embeddings.py  smoke_deployment.py  smoke_temporary_gallery.py  train_adapter.py  wait_for_deployment.py
tests/: test_adapters.py  test_api.py  test_cleanup_workspace.py  test_demo_evaluation.py  test_deployment_scripts.py  test_deployment_smoke.py  test_duplicates.py  test_encoder.py  test_evaluation.py  test_index.py  test_jobs.py  test_library.py  test_precision_reranker_evaluation.py  test_repository.py  test_reranker.py  test_search_filters.py  test_sessions.py  test_tags.py
(+63 files in other folders)
