[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "muselens"
version = "0.1.0"
description = "A local-first multimodal image search and organization system."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "numpy>=2,<3",
  "pillow>=10,<13",
  "python-multipart>=0.0.9,<1",
  "torch>=2.3,<3",
  "transformers>=4.50,<6",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = ["httpx>=0.27,<1", "pytest>=8,<10", "ruff>=0.6,<1"]
faiss = ["faiss-cpu>=1.14,<2"]
precision = [
  "qwen-vl-utils>=0.0.14,<1",
  "torchvision>=0.20,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
